# IPEO

./: .gitignore  README.md  pyproject.toml
artifacts/: .gitkeep
configs/: baselines.yaml  cost_prices.yaml  models.yaml  mvp.yaml  tasks.yaml
ipeo/: __init__.py
ipeo/baselines/: __init__.py  dspy_optimizers.py  official_optimizers.py  optional_wrappers.py
ipeo/core/: ids.py  io.py  schemas.py
ipeo/effects/: __init__.py  bootstrap.py  design_matrix.py  invariant_scorer.py  ridge_estimator.py
ipeo/evaluation/: __init__.py  cache.py  cost_ledger.py  evaluator.py
ipeo/methods/: __init__.py  budgeted_ipeo.py  fixed_pool.py  ipeo_few_target.py  ipeo_zero.py
ipeo/models/: base.py  mock.py  openai_adapter.py
ipeo/prompts/: __init__.py  composer.py  pool_builder.py  seed_prompts.py
ipeo/runners/: analyze_many.py  analyze_run.py  progress.py  run_dry.py  run_openai.py
ipeo/stats/: __init__.py  benchmark_analysis.py  budget_select_analysis.py  ipeo_compare.py  method_summary.py  multi_run_analysis.py  regret.py  split_contract.py
ipeo/tasks/: __init__.py  adapters.py  base.py  fixtures.py  ifbench_official.py
tests/: test_benchmark_analysis.py  test_core.py  test_effects.py  test_multi_run_analysis.py  test_openai_runner.py  test_run_dry.py
